# Paralelno-in-Porazdeljeno-Racunanje

./: .gitignore  CMakeLists.txt  main.cpp
Block/: Block.cpp  Block.h
BlockChain/: BlockChain.cpp  BlockChain.h
Rating/: Rating.cpp  Rating.h
sha256/: sha256.cpp  sha256.h
